# os-checker

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.MulanPubL  Makefile  README.md  build.rs  dist-workspace.toml  rust-toolchain.toml
.github/workflows/: docker.yml  norun.yml  run.yml  subcommand-batch.yml
assets/: JSON-config.md  JSON-data-format.md  WebUI.md  db-issue-template.sh  development-logs.md  embassy.json  large.json  merge.json  repos-default.json  repos-ui-targets.json  repos-ui.json  repos.json  repos.yaml  schema.json  test-input.json  test.jq  test.md  test.sh
examples/: batch.rs
os-checker-database/: Cargo.toml  LICENSE.MulanPubL
os-checker-database/examples/: convert_repo_json.rs
os-checker-database/examples/convert_repo_json/: atomvchecker.rs  cli.rs  main.rs
os-checker-database/examples/convert_repo_json/demo/: lockbud-after.json  lockbud-before.json
os-checker-database/examples/demo/: lockbud-after.json
os-checker-database/examples/lockbud/: mod.rs
os-checker-database/src/: logger.rs  main.rs  utils.rs
os-checker-database/src/basic/: inner.rs  mod.rs  pkgs.rs  tests.rs
os-checker-database/src/db/: mod.rs
os-checker-database/src/file_tree/: mod.rs  tests.rs
os-checker-database/src/home/: mod.rs  tests.rs
os-checker-database/src/stats/: mod.rs
os-checker-database/src/targets/: mod.rs
os-checker-types/: Cargo.toml
os-checker-types/src/: cache.rs  checks.rs  config.rs  db.rs  info.rs  layout.rs  lib.rs  prelude.rs  table.rs  targets.rs  tests.rs  toolchain.rs
os-checker-types/src/out_json/: file_tree.rs  mod.rs
os-checker-types/src/tests/: musli_tests.rs
src/: logger.rs  main.rs  utils.rs
src/analysis/: mod.rs
src/cli/: arg_config.rs  mod.rs
src/config/: checker.rs  cmd.rs  deserialization.rs  merge_from_json.rs  mod.rs  resolve.rs  tests.rs  uri.rs  validate.rs
src/config/cmd/: tests.rs
src/config/deserialization/: config_options.rs  misc.rs  repo.rs  tests.rs  type_conversion.rs
src/config/deserialization/config_options/: features.rs  type_conversion.rs
src/config/deserialization/config_options/features/: tests.rs  type_conversion.rs
src/config/tests/: a.json  large.json  mod.rs
src/config/tests/snapshots/: array-of-cmds.txt  batch1.txt  large-batch-3.txt  large-batch-split-by-half.txt  merge-configs.txt  merged-jsons.txt  parse-a-json.txt  parse-a-json_resolve.txt  resolve.txt  single-cmd.txt
src/db/: db.rs  layout.rs  mod.rs  types.rs  utils.rs
src/db/cache/: mod.rs  type_conversion.rs
src/db/gh/: mod.rs
src/db/info/: local.rs  mod.rs  read_cache.rs  type_conversion.rs
src/db/layout/: mod.rs  type_conversion.rs
src/layout/: audit.rs  cargo_check_verbose.rs  detect_targets.rs  mod.rs  targets.rs  tests.rs
src/layout/snapshots/: arceos-packages.txt  arceos.txt  cargo-check-verbose.txt  check_diagnostics.txt  e1000-driver-test_package_info.txt  e1000-driver.txt
src/layout/targets/: mod.rs  type_conversion.rs
src/output/: mod.rs  norun.rs  targets.rs  toolchain.rs
src/repo/: cmd.rs  merge_from_json.rs  mod.rs  tests.rs  uri.rs  validate.rs
src/repo/cmd/: tests.rs
src/repo/snapshots/: basic-config-checker_action.txt  basic-config.txt  pkg_checker_action-basic.txt  pkg_checker_action-fmt_clippy_only.txt
src/run_checker/: analysis.rs  geiger.rs  lockbud.rs  mod.rs  outdated.rs  packages_outputs.rs  rap.rs  rudra.rs  semver_checks.rs  tests.rs  tests.snapshot  utils.rs
src/run_checker/snapshots/: json-arceos.json  json-arceos.txt  json-test-suite.json  json-test-suite.txt  json-test-suite_jq_count.json  json-test-suite_jq_count.txt  outputs-arceos.txt  outputs-test-suite.txt  statistics-arceos.json  statistics-arceos.txt  statistics-test-suite.json  statistics-test-suite.txt  statistics-test-suite_raw_reports.json  statistics.txt
src/utils/: env_var.rs  exlucded.rs  installation.rs  mod.rs  scan_for_targets.rs
