[package]
name = "os-checker"
version = "0.6.1"
edition = "2021"
rust-version = "1.80"
exclude = ["assets", ".github", "repos", "tests", "examples", "Makefile", "dist-workspace.toml"]
repository = "https://github.com/os-checker/os-checker"
description = "Run a collection of checkers targeting Rust crates, and report bad checking results and statistics."

# dual licensing: "GPL-3.0 OR MulanPubL"
# MulanPubL is not listed by SPDX, failing to be published to crates.io.
# Thus use a license and another license-file as a workaround,
license = "GPL-3.0"
license-file = "./LICENSE.MulanPubL"

[dependencies]
argh = "0.1.12"   # cli argument parser
walkdir = "2.5.0" # recursively search Cargo.toml for finding packages
basic-toml = "0.1"
regex = "1.10.5"
prettydiff = { version = "0.7.0", default-features = false }
either = "1"
schemars = { version = "1.0.0-alpha.15", features = ["preserve_order", "indexmap2"] }
strip-ansi-escapes = "0.2"
jsonxf = "1"
# wait for https://github.com/gamache/jsonxf/pull/10 to merge
# jsonxf = {git="https://github.com/os-checker/jsonxf.git", branch="make-getopts-optional", default-features = false}
rustsec = { version = "0.30.2", default-features = false, features = ["dependency-tree"] }
# replace_with = "0.1"

# error handling
eyre = { workspace = true }
color-eyre = { workspace = true }

# logger
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

# general
cargo_metadata = { workspace = true }
indexmap = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
compact_str = { workspace = true }
redb = { workspace = true }
musli = { workspace = true }
time = { workspace = true }
camino = { workspace = true }
os-checker-types = { workspace = true }
glob = { workspace = true }

# shell commands
duct = { workspace = true }
yash-syntax = "0.12.0" # shell lang parsing

[dev-dependencies]
expect-test = "1.5.0" # use `UPDATE_EXPECT=1 cargo t` to update all tests
dirs = "5"
# tempfile = "3"

[build-dependencies]
duct = { workspace = true } # better subprocess, pipe, redirct
color-eyre = "0.6.3"

[workspace.dependencies]
ahash = "0.8.11"
camino = { version = "1.1.9", features = ["serde1"] } # Utf8 Path
compact_str = { version = "0.8.0", features = ["serde"] }
duct = "0.13.7" # better subprocess, pipe, redirct
hashbrown = { version = "0.15", features = ["default"]}
indexmap = { version = "2.4.0", features = ["serde"] }
itertools = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["preserve_order"] }
glob = "0.3"

# error handling
eyre = "0.6.12"
color-eyre = "0.6.3"

# logger
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2"

redb = "2"
musli = { version = "0.0.124", features = ["storage", "serde"] }
time = { version = "0.3", features = ["parsing", "macros"] }

os-checker-types = { version = "0.6.0", path = "os-checker-types" }

cargo_metadata = "0.18.1" # parse metadata for knowing project layout
# [workspace.dependencies.cargo_metadata]
# git = "https://github.com/os-checker/cargo_metadata.git"
# # branch = "workspace_default_members-serde-default"
# rev = "dc53ab2"

[workspace]
exclude = ["repos/**"]
members = ["os-checker-types", "os-checker-database"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
