[package]
name = "os-checker-database"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { workspace = true }
camino = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
os-checker-types = { path = "../os-checker-types" }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# error handling
eyre = { workspace = true }
color-eyre = { workspace = true }

# logger
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

[features]
default = ["batch"]
single = []
batch = []
clear_batch = [] # 清除 BASE_DIR/batch 目录

