[package]
name = "os-checker-database"
version = "0.3.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"
exclude = ["assets", ".github", "repos", "tests", "examples", "Makefile"]
repository = "https://github.com/os-checker/os-checker"
description = "The output transformer of os-checker CLI, used to generate static data for os-checker WebUI."

[dependencies]
ahash = { workspace = true }
camino = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
os-checker-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# error handling
eyre = { workspace = true }
color-eyre = { workspace = true }

# logger
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

[features]
default = ["batch"]
single = []
batch = []
clear_batch = [] # 清除 BASE_DIR/batch 目录

