[package]
name = "os-checker-database"
version = "0.8.0"
edition = "2021"
rust-version = "1.80"
exclude = ["assets", ".github", "repos", "tests", "examples", "Makefile"]
repository = "https://github.com/os-checker/os-checker"
description = "The output transformer of os-checker CLI, used to generate static data for os-checker WebUI."

# dual licensing: "GPL-3.0 OR MulanPubL"
# MulanPubL is not listed by SPDX, failing to be published to crates.io.
# Thus use a license and another license-file as a workaround,
license = "GPL-3.0"
license-file = "LICENSE.MulanPubL"

[dependencies]
ahash = { workspace = true }
camino = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
os-checker-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# error handling
eyre = { workspace = true }
color-eyre = { workspace = true }

# logger
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

# redb
redb = { workspace = true }
musli = { workspace = true }

[dev-dependencies]
argh = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[features]
default = ["clear_batch"]
clear_batch = [] # 清除 BASE_DIR/batch 目录

