[package]
name = "os-checker-types"
version = "0.4.1"
edition = "2021"
license = "MIT"
rust-version = "1.80"
exclude = ["assets", ".github", "repos", "tests", "examples", "Makefile"]
repository = "https://github.com/os-checker/os-checker"
description = "The output types of os-checker CLI."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
compact_str = { workspace = true }
camino = { workspace = true }
time = { workspace = true }
redb = { workspace = true }
musli = { workspace = true }
indexmap = { workspace = true }
cargo_metadata = { workspace = true }
# [dependencies.cargo_metadata]
# git = "https://github.com/os-checker/cargo_metadata.git"
# # branch = "workspace_default_members-serde-default"
# rev = "dc53ab2"

tracing = { workspace = true }
eyre = { workspace = true }
