[package]
name = "os-checker-types"
version = "0.8.0"
edition = "2021"
rust-version = "1.80"
exclude = ["assets", ".github", "repos", "tests", "examples", "Makefile"]
repository = "https://github.com/os-checker/os-checker"
description = "The output types of os-checker CLI."

# dual licensing: "GPL-3.0 OR MulanPubL"
# MulanPubL is not listed by SPDX, failing to be published to crates.io.
# Thus use a license and another license-file as a workaround,
license = "GPL-3.0"
license-file = "../LICENSE.MulanPubL"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
compact_str = { workspace = true }
camino = { workspace = true }
time = { workspace = true }
redb = { workspace = true }
musli = { workspace = true }
indexmap = { workspace = true }
cargo_metadata = { workspace = true }
# [dependencies.cargo_metadata]
# git = "https://github.com/os-checker/cargo_metadata.git"
# # branch = "workspace_default_members-serde-default"
# rev = "dc53ab2"

tracing = { workspace = true }
eyre = { workspace = true }
